# mecatronica_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: mecatronica.launch
models/mecatronica/: model.config  model.sdf
models/mecatronica/materials/scripts/: mecatronica.material
models/mecatronica/meshes/: mecatronica.dae  mecatronica.stl  walls.stl
worlds/: mecatronica.world
