<?xml version="1.0"?>
<package format="2">
  <name>mecatronica_gazebo</name>
  <version>0.0.0</version>
  <description>The mecatronica_gazebo package</description>

  <maintainer email="juansantacoloma@todo.todo">juansantacoloma</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path ="${prefix}/models"/>
    <gazebo_ros gazebo_media_path ="${prefix}/worlds"/>
  </export>
</package>
